--- a/public/indextest.html
+++ b/public/indextest.html
@@ -377,7 +377,7 @@
             if (option == 2) {
               /*script_content = script_content + "&nbsp;<button class='btn waves-effect waves-light' onclick=\"open_rewrite_plot_dashboard(" + i +
                 ")\">Rewrite <i class='material-icons right'>edit</i></button>";*/
-              script_content = script_content + "&emsp;<a class='btn-floating btn-small waves-effect waves-light red editbuttonclass'><i class='material-icons' onclick='open_rewrite_plot_dashboard("+i+")'>edit</i></a></div>&nbsp;<br/>";
+              script_content = script_content + "&emsp;<a class='btn btn-primary editbuttonclass' onclick='open_rewrite_plot_dashboard("+i+")'>edit</a></div>&nbsp;<br/>";
             } else if (option == 3) {
               script_content = script_content + "<br/><audio style=\"height: 15px;\" src='/audio/" + audio_file_names[i] +
                 "' controls></audio></div>&nbsp;<br/>";
@@ -407,7 +407,7 @@
         if (option == 2) {
           script_content = script_content +
             "<div class='text-center'>" +
-            "<br/>&nbsp;<br/>&nbsp;<br/><button id='generate_audio_button' class='btn waves-effect waves-light blue white-text' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript <i class='material-icons right'>music_note</i></button>" +
+            "<br/>&nbsp;<br/>&nbsp;<br/><button id='generate_audio_button' class='btn btn-primary' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript</button>" +
             "</div>";
         }
       }
