Template Change In Progress

--- a/public/indextest.html
+++ b/public/indextest.html
@@ -377,7 +377,7 @@
             if (option == 2) {
               /*script_content = script_content + "&nbsp;<button class='btn waves-effect waves-light' onclick=\"open_rewrite_plot_dashboard(" + i +
                 ")\">Rewrite <i class='material-icons right'>edit</i></button>";*/
-              script_content = script_content + "&emsp;<a style=\"border-radius: 50%; color: white;\" class='btn btn-primary btn-sm editbuttonclass' onclick='open_rewrite_plot_dashboard("+i+")'><i class=\"material-icons\">edit</i></a></div>&nbsp;<br/>";
+              script_content = script_content + "&emsp;<a style=\"border-radius: 50%; color: white;\" class='btn btn-danger btn-sm editbuttonclass' onclick='open_rewrite_plot_dashboard("+i+")'><i class=\"material-icons\">edit</i></a></div>&nbsp;<br/>";
             } else if (option == 3) {
               script_content = script_content + "<br/><audio style=\"height: 15px;\" src='/audio/" + audio_file_names[i] +
                 "' controls></audio></div>&nbsp;<br/>";
