Template Change In Progress

--- a/public/indextest.html
+++ b/public/indextest.html
@@ -36,16 +36,11 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">Alyce</a></h1>
+      <h1 class="logo mr-auto"><a href="http://alyce.southeastasia.cloudapp.azure.com" target="_blank">Alyce</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Technologies</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#contact">Contact</a></li>
-
+          <li class="active"><a href="http://alyce.southeastasia.cloudapp.azure.com" target="_blank">Home</a></li>
         </ul>
       </nav>
 
@@ -218,18 +213,14 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="http://alyce.southeastasia.cloudapp.azure.com" target="_blank">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://github.com/alyce-garner-peterson"
+                target="_blank">Github</a></li>
             </ul>
           </div>
           <div class="col-lg-7 col-md-6 footer-links">
             <h4>&nbsp;</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#team">Team</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://github.com/alyce-garner-peterson"
-                  target="_blank">Github</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="/implementation" target="_blank">Implementation</a></li>
             </ul>
           </div>
         </div>
