--- a/public/indextest.html
+++ b/public/indextest.html
@@ -18,7 +18,6 @@
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <link href="assets/css/style.css" rel="stylesheet">
@@ -40,7 +39,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="http://alyce.southeastasia.cloudapp.azure.com" target="_blank">Home</a></li>
+          <li class="active"><a href="http://alyce.southeastasia.cloudapp.azure.com" target="_blank">Back To Home</a></li>
         </ul>
       </nav>
 
@@ -81,11 +80,11 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 offset-lg-2 text-center">
             &nbsp;<br />
-            <button class="btn btn-primary" id="fetch_input_story">Fetch Sample</button>
+            <button class="btn btn-primary" id="fetch_input_story">Fetch Sample <i class="ri-clipboard-fill"></i></button>
           </div>
           <div class="col-12 col-md-6 col-lg-4 text-center">
             &nbsp;<br />
-            <button class="btn btn-primary" id="submit_input_story">&nbsp;&nbsp;&nbsp;Submit&nbsp;&nbsp;&nbsp;
+            <button class="btn btn-primary" id="submit_input_story">&nbsp;&nbsp;&nbsp;Submit&nbsp;&nbsp;&nbsp;<i class="ri-send-plane-2-line"></i>
             </button>
           </div>
         </div>
