--- a/public/indextest.html
+++ b/public/indextest.html
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="text-center">
-        <a class="btn btn-primary btn-sm" onclick="$('#input_section').get(0).scrollIntoView({behavior: 'smooth'});">Start Writing</a>
+        <a class="btn btn-primary btn-sm" style="color: white; border-radius: 30px;" onclick="$('#input_section').get(0).scrollIntoView({behavior: 'smooth'});">&nbsp;&nbsp;&nbsp;Start Writing&nbsp;&nbsp;&nbsp;<br><i class="ri-arrow-down-s-fill"></i></a>
       </div>
     </div>
   </section>
@@ -296,7 +296,7 @@
     function add_control_buttons_to_plot_rewrite_dashboard(plot_no) {
       rewrite_element_0.innerHTML = story_list[plot_no][0] +
         "<br/>&nbsp;<br/><button class=\"btn btn-primary\" onclick=\"rewrite_plot(" + plot_no +
-        ")\">Write New Plot <i class=\"ri-add-line\"></i></button>&emsp;<button class=\"btn btn-primary\" onclick=\"close_rewrite_plot_dashboard()\">Done <i class=\"ri-check-fill\"></i></button>"
+        ")\">Write New Plot&nbsp;&nbsp;<i class=\"ri-add-line\"></i></button>&emsp;<button class=\"btn btn-primary\" onclick=\"close_rewrite_plot_dashboard()\">Done&nbsp;&nbsp;<i class=\"ri-check-fill\"></i></button>"
     }
 
     function add_radio_buttons_to_plot_rewrite_dashboard(plot_no){
@@ -391,7 +391,7 @@
         if (option == 2) {
           script_content = script_content +
             "<div class='text-center'>" +
-            "<br/>&nbsp;<br/>&nbsp;<br/><button id='generate_audio_button' class='btn btn-primary' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript <i class=\"ri-music-fill\"></i></button>" +
+            "<br/>&nbsp;<br/>&nbsp;<br/><button id='generate_audio_button' class='btn btn-primary' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript&nbsp;&nbsp;<i class=\"ri-music-fill\"></i></button>" +
             "</div>";
         }
       }
@@ -549,6 +549,7 @@
             //rewrite_progress.innerHTML = "Started Creating New Plot Please Wait !.....";
             //document.getElementsByTagName("body")[0].classList.add("loader");
             $("#rewrite_section").addClass('loader');
+            $("#rewrite_section").get(0).scrollIntoView({behavior: "smooth"});
           }
           logger_element.innerHTML = logger_element.innerHTML + "<br/><b>Phase 2.2 Started</b>";
         } else if (data.phase == 2 && data.procedureNo == 1 && data.status == "COMPLETED") {
